--- a/site/index.html
+++ b/site/index.html
@@ -1060,7 +1060,7 @@
             <li>
               <span class="label">Telefone/WhatsApp:</span>
               <!-- AJUSTAR TELEFONE -->
-              <span>(11) 99999-9999</span>
+              <span>(15) 99107- 4419</span>
             </li>
             <li>
               <span class="label">E-mail:</span>
